--- a/circle.yml
+++ b/circle.yml
@@ -4,3 +4,12 @@ test:
   override:
     - "true"
 
+dependencies:
+  pre:
+    - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+	
+deployment:
+  npm:
+    tag: /v[0-9]+(\.[0-9]+)*/
+        commands:
+      - npm publish
