--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "Server",
     "NEEO"
   ],
+  "dependencies": {
+    "jayson": "1.1.3",
+    "super": "0.2.3",
+    "request": "2.51.0",
+    "neeo-sdk": "*"
+  },
   "author": "Stuart Trout",
   "license": "MIT",
   "bugs": {
