--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neeo_driver_squeezebox",
-  "version": "1.1.4",
+  "version": "2.0.0-beta",
   "description": "This driver adds Squeezebox / Logitech Media Server support to NEEO",
   "main": "index.js",
   "scripts": {
@@ -18,9 +18,9 @@
     "NEEO"
   ],
   "dependencies": {
-    "jayson": "1.1.3",
+    "jayson": "2.0.5",
     "super": "0.2.3",
-    "request": "2.51.0",
+    "request": "2.83.0",
     "neeo-sdk": "*"
   },
   "author": "Stuart Trout",
