--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "2.0.0-beta",
   "description": "This driver adds Squeezebox / Logitech Media Server support to NEEO",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": { "test": "jasmine" },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/clegendre/neeo_driver_squeezebox.git"
@@ -28,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/clegendre/neeo_driver_squeezebox"
   },
-  "homepage": "https://github.com/clegendre/neeo_driver_squeezebox#readme"
+  "homepage": "https://github.com/clegendre/neeo_driver_squeezebox#readme",
+  "devDependencies": {
+    "jasmine": "^2.8.0"
+  }
 }
